# vecs

./: .gitignore  README.md  pyproject.toml
docs/: session-handoff-2026-05-18.md  vecs-ab-locate-payload-2026-06-17.md  vecs-direction-review-2026-06.md  vecs-hq-talk-findings-2026-06-17.md  vecs-kb-curation-design-2026-06.md  vecs-platform-strategy-2026-05.md  vecs-roadmap.md  workflow-framework-v0.1.md  workflow-vecs-profile-v0.1.md
docs/features/: context-staleness-detector-design-v1.md  prose-staleness-detector-design-v1.md  shared-team-vecs-future.md
docs/research/: local-embedding-models-2026-06-11.md  prose-drift-review-and-sota-2026-05-29.md
docs/templates/: retro.md
evalsets/: README.md  vecs.yaml
scripts/: ab_local_embed.py  bench_bm25.py  check_acceptance.py  register_self.py  spike_local_embed.py
src/vecs/: CLAUDE.md  __init__.py  ast_chunker.py  bm25_index.py  chunkers.py  cli.py  clients.py  codex_chunker.py  codex_routing.py  config.py  doc_chunker.py  embed_cache.py  embed_provider.py  indexer.py  (+6 more)
tests/: conftest.py  indexer_helpers.py  test_batching.py  test_bm25.py  test_cli.py  test_codex_chunker.py  test_codex_routing.py  test_config.py  test_doc_chunker.py  test_embed_cache.py  test_embed_provider.py  test_eval_harness.py  test_indexer.py  test_indexer_code.py  test_indexer_docs.py  test_indexer_embed.py  test_indexer_manifest.py  test_indexer_run.py  test_indexer_sessions.py  test_mcp_server.py  test_metering.py  test_prose_drift.py  test_prose_drift_wire_in.py  test_searcher.py  test_session_chunker.py  test_telemetry.py  test_utils.py
(+28 files in other folders)
